2010-05-05 12:38-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormClassInspector.m: 
	[GormClassInspector selectClass:] Refresh connections so that
	when the class is reparented only those connections which aren't
	present anymore get broken.

2010-05-04 19:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormClassInspector.m: Allow a class' name to be changed
	in the GormClassInspector without it disconnecting all connections
	for that class.

2010-05-02 01:11-EDT Gregory John Casamento <greg.casamento@gmail.com>

	Applied patch submitted by qmathe.
	* GormCore/GormClassManager.m: Remove include for GSCategories.h

2010-03-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/gorm.texi: Fixed opening file to say 'gopen -a Gorm.app'
	for bug #29085

2010-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* GormCore/GormFunctions.m: update for latest base library.

2010-02-24 17:55-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/ControlsPalette.tiff
	* Palettes/4Data/DataPalette.tiff: Remove background and replace
	with alpha.

2010-02-12 20:01-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormFunctions.m: Correct the function which enumerates
	over the list of methods in a class when adding from a palette.

2010-02-08 07:13-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Gorm.m: Separate out the server methods into a category.

2010-02-08 06:46-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormServer.h: Added deleteClass: method
	* Gorm.m: Added implementation for deleteClass:

2010-02-07 05:43-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GNUmakefile: Added GormServer.h to the headers.
	* GormCore/GormCustomClassInspector.m: Change tooltip when
	a new custom class is selected from the list.
	* GormCore/GormPalettesManager.m: Set autoresizing on drag view.
	* GormCore/GormServer.h: Protocol for GormServer.